[gd_scene load_steps=25 format=2]

[ext_resource path="res://Assets/UI/input_menu_bg.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/Audio_image.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/input_menu_bg0.png" type="Texture" id=5]
[ext_resource path="res://Prefabs/Dynamic_Fonts/UI_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://Prefabs/audio_manager.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/UI/slider_buttons/slider_cursor_select.png" type="Texture" id=8]
[ext_resource path="res://Prefabs/Shaders/UI_shader_blur.tres" type="Shader" id=9]
[ext_resource path="res://Assets/UI/slider_buttons/slider_cursor_normal.png" type="Texture" id=10]
[ext_resource path="res://Prefabs/Shaders/InfiniteScrollTexture_shader.gdshader" type="Shader" id=11]
[ext_resource path="res://Assets/UI/slider_buttons/slider_bg0.png" type="Texture" id=12]
[ext_resource path="res://Scripts/Audio_Menu.gd" type="Script" id=13]
[ext_resource path="res://Assets/UI/slider_buttons/music_bg1.png" type="Texture" id=14]
[ext_resource path="res://Assets/UI/slider_buttons/sound_bg1.png" type="Texture" id=15]

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 9 )
shader_param/tint = Color( 0.0862745, 0, 0.196078, 1 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 11 )
shader_param/Direction = Vector2( 1, 1 )
shader_param/Speed = 0.05

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

uniform vec2 Direction = vec2(1.0,0.0);
uniform float Speed = 0.08;

void fragment()
{
	COLOR = texture(TEXTURE, UV + (Direction * TIME * Speed));
	
	
	
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 5 )
shader_param/Direction = Vector2( 0, 1 )
shader_param/Speed = 0.08

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 11 )
shader_param/Direction = Vector2( 0, 1 )
shader_param/Speed = 0.08

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 77, 6 )

[sub_resource type="StyleBoxTexture" id=12]

[sub_resource type="StyleBoxTexture" id=13]

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 77, 6 )

[sub_resource type="StyleBoxTexture" id=15]

[sub_resource type="StyleBoxTexture" id=16]

[node name="Audio_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="Sprite" parent="Background"]
texture = ExtResource( 5 )
centered = false

[node name="ColorRect" type="ColorRect" parent="Background"]
visible = false
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0627451, 0.0313726, 0.0313726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="Sprite" parent="Background"]
modulate = Color( 1, 1, 1, 0.0627451 )
material = SubResource( 2 )
position = Vector2( 160, 92 )
texture = ExtResource( 1 )

[node name="CONTROLS1" type="Sprite" parent="Background"]
modulate = Color( 1, 1, 1, 0.196078 )
material = SubResource( 4 )
position = Vector2( 30, 91 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="CONTROLS2" type="Sprite" parent="Background"]
modulate = Color( 1, 1, 1, 0.196078 )
material = SubResource( 6 )
position = Vector2( 291, 91 )
rotation = 3.14159
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Slider_group" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Slider_group"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -176.0
margin_top = -28.0
margin_right = -17.0
margin_bottom = 28.0
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slider_M" type="Container" parent="Slider_group/VBoxContainer"]
margin_right = 159.0

[node name="MusicBg1" type="Sprite" parent="Slider_group/VBoxContainer/Slider_M"]
position = Vector2( 16, 10 )
texture = ExtResource( 14 )

[node name="slider_bgm" type="HSlider" parent="Slider_group/VBoxContainer/Slider_M"]
margin_right = 77.0
margin_bottom = 20.0
custom_icons/grabber_highlight = ExtResource( 8 )
custom_icons/grabber = ExtResource( 10 )
custom_styles/slider = SubResource( 11 )
custom_styles/grabber_area_highlight = SubResource( 12 )
custom_styles/grabber_area = SubResource( 13 )
min_value = -20.0
max_value = 10.0

[node name="Slider_S" type="Container" parent="Slider_group/VBoxContainer"]
margin_top = 32.0
margin_right = 159.0
margin_bottom = 32.0

[node name="SoundBg1" type="Sprite" parent="Slider_group/VBoxContainer/Slider_S"]
position = Vector2( 16, 10 )
texture = ExtResource( 15 )

[node name="slider_sfx" type="HSlider" parent="Slider_group/VBoxContainer/Slider_S"]
margin_right = 77.0
margin_bottom = 20.0
custom_icons/grabber_highlight = ExtResource( 8 )
custom_icons/grabber = ExtResource( 10 )
custom_styles/slider = SubResource( 14 )
custom_styles/grabber_area_highlight = SubResource( 15 )
custom_styles/grabber_area = SubResource( 16 )
min_value = -20.0
max_value = 10.0

[node name="audio_manager" parent="." instance=ExtResource( 7 )]

[node name="hint" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -124.5
margin_right = 124.5
margin_bottom = 14.0
custom_fonts/font = ExtResource( 6 )
text = "Move a slider to change the Music/SFX volume"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_exited" from="Slider_group/VBoxContainer/Slider_M/slider_bgm" to="." method="_on_slider_bgm_mouse_exited"]
[connection signal="value_changed" from="Slider_group/VBoxContainer/Slider_M/slider_bgm" to="." method="_on_slider_bgm_value_changed"]
[connection signal="mouse_exited" from="Slider_group/VBoxContainer/Slider_S/slider_sfx" to="." method="_on_slider_sfx_mouse_exited"]
[connection signal="value_changed" from="Slider_group/VBoxContainer/Slider_S/slider_sfx" to="." method="_on_slider_sfx_value_changed"]
